prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
spec:
  selector:
    matchLabels:
      app: prowlarr
      release: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
        release: prowlarr
    spec:
      volumes:
      - name: prowlarr-config  # < linkname of the volume for the pvc
        hostPath:
          path: /mnt/k3s/prowlarr-config # < pvc name we created in the previous yaml

      containers:
      - image: linuxserver/prowlarr:latest
        imagePullPolicy: Always
        name: prowlarr
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /config
          name: prowlarr-config
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
